# sol-manager

./: Anchor.toml
programs/sol-manager/: Cargo.toml
programs/sol-manager/src/: ed25519.rs  lib.rs
tests/: sol-manager.ts
